--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,11 +15,11 @@ jobs:
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
+            set -e
             cd ~/sellux_plaster
             git stash
             git pull origin main
             git stash pop || true
-            source venv/bin/activate
-            python manage.py migrate
-            python manage.py collectstatic --noinput
-            sudo systemctl restart gunicorn
+            ~/sellux_plaster/venv/bin/python manage.py migrate
+            ~/sellux_plaster/venv/bin/python manage.py collectstatic --noinput
+            systemctl restart gunicorn
